force-app/main/default/objects/Landing_Sync_Mapping__c/Landing_Sync_Mapping__c.object-meta.xml
<CustomObject>
    <label>inwise Landing Sync Mapping</label>
    <nameField>
        <displayFormat>LSMN-{0000}</displayFormat>
        <label>Landing Sync Mapping No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Landing Sync Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>