force-app/main/default/objects/Landing_Sync_Mapping__c/fields/inwise_FieldId__c.field-meta.xml
<CustomField>
    <fullName>inwise_FieldId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>inwise FieldId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>